Fix z-index stacking conflict

--- a/frontend/src/components/ListCard/ListSpread.css
+++ b/frontend/src/components/ListCard/ListSpread.css
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  z-index: 5000;
+  z-index: 6;
   transition: border 0.1s linear;
 }
 
