--- a/frontend/src/components/ProfileDropdown/ProfileDropdown.css
+++ b/frontend/src/components/ProfileDropdown/ProfileDropdown.css
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   padding-left: 0;
+  z-index: 7;
 }
 
 .dropdown-item {
